chore: mostly code formatting, updated deprecated methods